--- a/src/main/package.json
+++ b/src/main/package.json
@@ -4,8 +4,7 @@
   "description": "This website is architected to be easy to use (for me) and makes it easy for me to add functionality into it in the future. Though its primary purpose remains as a dump for my thoughts, eventually I would want to use this site as a spawning pool for ideas.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./bin/build.sh"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
